# wsggpy

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.cursor/rules/: python-code-quality.mdc  python-development-workflow.mdc  python-formatting.mdc  python-mypy-types.mdc  python-project-structure.mdc  python-testing.mdc
.github/workflows/: ci.yml
examples/: reconnection_demo.py  simple_async.py  simple_sync.py
src/wsggpy/: __init__.py  async_session.py  exceptions.py  handlers.py  models.py  protocol.py  session.py
tests/: test_async_session.py  test_chat_environment.py  test_exceptions.py  test_handlers.py  test_integration.py  test_models.py  test_protocol.py  test_session.py
